# uSpmm-amd

./: .gitignore  CMakeLists.txt  makefile  readme.md
benchmarks/: CMakeLists.txt  benchmark_basic.hip  benchmark_mtx_files.hip  benchmark_shuffled_synthetic_matrices.hip  benchmark_spmm.hip  benchmark_synthetic_matrices.hip
examples/: CMakeLists.txt  checkers_reordering.cpp  mtx_file_reading.cpp  uspmm_checkers.hip
include/matrix_utils/: conversion.hpp  generation.hpp  io.hpp  types.hpp
include/uspmm/: clustering.hpp  spmm_rocwmma.hpp
src/uspmm/: spmm_rocwmma.hip
tests/: CMakeLists.txt  test_clustering.cpp  test_conversion.cpp
